force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>社員情報</description>
    <label>社員情報</label>
    <nameField>
        <displayFormat>Q{YY}{MM}{DD}-{0000}</displayFormat>
        <label>社員番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>