force-app/main/default/objects/Employee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>社員の連絡先である住所(郵便番号ある）</description>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>