force-app/main/default/objects/Employee__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>生年月日</label>
    <length>100</length>
    <type>Text</type>
</CustomField>