force-app/main/default/objects/Employee__c/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <label>メール</label>
    <length>100</length>
    <type>Text</type>
</CustomField>