force-app/main/default/objects/Employee__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>社員氏名</description>
    <label>氏名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>