force-app/main/default/objects/Employee__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>社員の連絡先である電場番号</description>
    <label>電話番号</label>
    <length>100</length>
    <type>Text</type>
</CustomField>